--- a/package.json
+++ b/package.json
@@ -44,5 +44,11 @@
     "webpack": "^4.27.1",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.10"
+  },
+  "dependencies": {
+    "@fullpage/react-fullpage": "^0.1.10",
+    "firebase": "^5.7.0",
+    "react-easy-swipe": "0.0.17",
+    "react-scrollbar": "^0.5.4"
   }
 }
