--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
+  "homepage": "https://github.com/mateuszgalecki/Taskator",
   "name": "webpack-react",
   "version": "1.0.0",
   "description": "",
   "main": "webpack.config.js",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "./node_modules/.bin/webpack-dev-server --open --mode development --env.dev",
     "build": "./node_modules/.bin/webpack --env.prod"
   },
